# scrapyvinterino

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.example.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_current_schema.py  0001_initial.py  0002_add_run_event_level.py  0002_item_detail_fields.py  0003_add_monitor_sessions.py  0003_opp_global_unique.py  0004_backfill_run_sessions.py  0004_scheduler_settings.py  (+27 more)
backend/tests/: api_client.py  conftest.py  manual_session_qa_app.py  proxy_sticky_contract_qa_app.py  same_profile_recovery_qa_app.py  test_actions_api.py  test_browse_api.py  test_catalog_failstop_integration.py  test_catalog_redirect_security_audit.py  test_config.py  test_consumer.py  test_ephemeral_http.py  test_evaluation_policy.py  test_filters.py  test_item_detail_state_audit.py  test_item_head.py  test_items.py  test_local_auth.py  test_local_auth_live.py  test_log_redaction.py  test_logging.py  test_manual_runs.py  test_manual_session_start_live.py  test_migrations.py  test_monitor_proxy_traffic.py  test_prepared_session_live_contract.py  test_prepared_session_read_model.py  test_proxies.py  test_proxy_identity_fence.py  test_proxy_sticky_contract_live.py  test_pwa_bootstrap_isolation_live.py  test_pwa_monitor_command_state_live.py  test_recurring_session_start_live.py  test_redaction.py  test_redis_client.py  test_run_event_outbox.py  test_run_event_stream.py  test_run_events.py  test_same_profile_recovery_live.py  test_scheduler.py  (+12 more)
(+134 files in other folders)
