[project]
name = "vinted-monitor"
version = "0.1.0"
description = "Backend and worker for a personal Vinted monitoring engine."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "cryptography>=46.0.0",
  "curl-cffi>=0.15.0",
  "fastapi>=0.124.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "redis>=7.0.0",
  "sqlalchemy>=2.0.45",
  "structlog>=26.0.0",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5.0",
  "playwright>=1.52.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.0",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.hatch.build.targets.wheel]
packages = ["src/vinted_monitor"]

[tool.hatch.build.targets.editable]
packages = ["src/vinted_monitor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
